--- a/health-tracker-frontend/.env
+++ b/health-tracker-frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://balanco-saude-a8d345616a1a.herokuapp.com/
+REACT_APP_API_URL=https://balanco-saude-a8d345616a1a.herokuapp.com/api
+
